# projet_kit_big_data

./: .env  .gitignore  .readthedocs.yaml  Dockerfile  Oriente objet idees.ipynb  Projet.docx  README.md  Untitled.ipynb  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  pytest_report.txt  readthedocs.yaml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  github-actions-demo.yml
.streamlit/: config.toml
TP/: main.py  processing_data.ipynb  question_1.py
TP/utils/: helper1.py
TP/zone_sacha/: app.py
TP_BGDIA700/src/: config.py  main.py
TP_BGDIA700/tests/: test_module1.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  utils.rst
pytest-of-paul/: pytest-current
pytest-of-paul/pytest-0/: test_load_large_csvcurrent
scripts/: MongoDBConnector.py  __init__.py  database_data.py  download_dataset.py  mongo_data.py  script.py
src/:  __init__.py  Recettes.py  Untitled.ipynb  config.py  main.py  question_1.py  questions.ipynb  👨‍🍳Recettes.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/css_pages/: analyse_user.css  main.css  page_sacha.css  recipe.css
src/pages/: 01_recipes.py  02_analyse_user.py  03_interactions.py  Analyse_recipes.py  Interactions.py  Nutrition.py  Page_sacha.py  analyse_user  .py  analyse_user.py  interactions.py  nutrition.ipynb  nutrition.py  page_sacha.py  recipes.py  test.py  users.py  🥗Nutrition.py
src/process/: nutrition_preprocess.py  recipes.py  recommandation.py
src/streamlit/: config.toml
src/utils/: MongoDBConnector.py  __init__.py  helper_data.py  static.py  streamlit.py
src/visualizations/: __init__.py  graphique.py  grille.py  load_css.py
src/zone_sacha/: app.py  app.txt  db_mapping.py
static/test_dir/: recipe_exemple.csv  test_file.csv
tests/: __init__.py  load_dataset_test.py  test.py  test_graphique.py  test_module1.py  test_script.py
tests/helper_data/: test_helper_data.py
(+72 files in other folders)
