[tool.poetry]
name = "TP"
version = "0.1.0"
description = "création d'une webapp Streamlit d'analyse de données"
authors = ["mbathe <mbathepaul@gmail.com>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
autopep8 = "^2.3.1"
pep8 = "^1.7.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
