[tool.poetry]
name = "projet-big-data"
version = "0.1.0"
description = "Ce projet est mis en place dans le cadre du projet de cours de Kit big data"
authors = ["mbathe <mbathepaul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
